Edited times in index for lyrics to better match video

--- a/my_old_kentucky_home/index.html
+++ b/my_old_kentucky_home/index.html
@@ -35,10 +35,10 @@
 		else if (music_video.currentTime > 42 && music_video.currentTime < 49) {
 			lyrics.innerHTML = "<p>All merry, all happy and bright</p>";
 		} 
-		else if (music_video.currentTime > 49 && music_video.currentTime < 55) {
+		else if (music_video.currentTime > 49 && music_video.currentTime < 55.5) {
 			lyrics.innerHTML = "<p>By 'n' by hard times comes a knocking at the door,<p>";
 		} 
-		else if (music_video.currentTime > 55 && music_video.currentTime < 64) {
+		else if (music_video.currentTime > 55.5 && music_video.currentTime < 64) {
 			lyrics.innerHTML = "<p>Then My Old Kentucky Home, good night!<p>";
 		} 
 		else if (music_video.currentTime > 64 && music_video.currentTime < 69.5) {
@@ -57,9 +57,9 @@
 			lyrics.innerHTML = "<p>For My Old Kentucky Home, far away</p>";
 		}
 		else {
-			lyrics.innerHTML = "";
+			lyrics.innerHTML = "<p></p>";
 		}
-		});
+	});
 </script>
 </body>
 </html>	
