Updated alternate text for images

--- a/my_old_kentucky_home/index.html
+++ b/my_old_kentucky_home/index.html
@@ -18,7 +18,7 @@
 
 	music_video.addEventListener("timeupdate", function() {
 		if(music_video.currentTime > 1 && music_video.currentTime < 4) {
-			lyrics.innerHTML = '<p> <img class = "pictures" src="kyderby.jpg" alt="Horse Racing"> </p>';
+			lyrics.innerHTML = '<p> <img class = "pictures" src="kyderby.jpg" alt="Kentucky Derby"> </p>';
 		}
 		else if(music_video.currentTime > 4 && music_video.currentTime < 8) {
 			lyrics.innerHTML = '<p> <img class = "pictures" src="horsesracing.jpg" alt="Horse Racing"> </p>';
