Fixed section name

--- a/security/index.html
+++ b/security/index.html
@@ -49,7 +49,7 @@
 				</li>
 			</ul>
 
-			<li><h4>Messing With Mongo</h4></li>
+			<li><h4>Querying Mongo</h4></li>
 			<ul>
 				<li><span class="subheading">Affects: </span> GET '/checkins.json'</li>
 				<li><span class="subheading">High: </span> Allows user to access everyone's location in JSON, and not just from their own username; a big privacy issue. Also, if the user can make queries in the database freely, they can probably manipulate the information in the database as well.<br></li>
